# EKRC2024

./: readme.txt
RC2024/devel/: .catkin  .rosinstall
RC2024/src/ball_carry/: CMakeLists.txt
RC2024/src/depthcam/: CMakeLists.txt  package.xml
RC2024/src/line_follower/: CMakeLists.txt
RC2024/src/odom_follower/: CMakeLists.txt  package.xml
RC2024/src/underpan/: CMakeLists.txt  package.xml
RC2024/trash/wheeltec_underpan/: CMakeLists.txt  wheeltec_udev.sh
RC2024/trash/wheeltec_underpan/include/: wheeltec_robot.h
RC2024/trash/wheeltec_underpan/launch/: gnss_matrix.launch  lgsvl-tf.launch  mapping.launch  pure3d_mapping.launch  pure3d_navigation.launch  robot_model_visualization.launch  robot_model_visualization_cx.launch  rrt_slam.launch  turn_on_wheeltec_robot.launch  ultrasonic_avoid.launch  wheeltec_camera.launch  wheeltec_lidar.launch
RC2024/trash/wheeltec_underpan/launch/include/: base_serial.launch  rtabmap_mapping.launch  rtabmap_nav.launch  teb_local_planner.launch
RC2024/trash/wheeltec_underpan/map/: WHEELTEC.pgm  WHEELTEC.yaml
RC2024/trash/wheeltec_underpan/params_costmap_common/: costmap_common_params_pure3d.yaml  global_costmap_params.yaml
RC2024/trash/wheeltec_underpan/params_nav_common/: teb_local_planner_params.yaml
RC2024/trash/wheeltec_underpan/scripts/: wheeltec_udev.sh
RC2024/trash/wheeltec_underpan/src/: lsm10_double_back.cpp  v650_wheeltec_robot.cpp  wheeltec_robot.cpp
RC2024/trash/wheeltec_underpan/urdf/: mini_akm_robot.urdf  mini_diff_robot.urdf  senior_akm_robot.urdf  top_akm_bs_robot.urdf  top_akm_dl_robot.urdf
(+99 files in other folders)
