cmake_minimum_required(VERSION 2.8.3)
project(turn_on_wheeltec_robot)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(PCL_H "/usr/include/pcl-1.10")
set( CMAKE_CXX_FLAGS "-std=c++14 -O3" )


find_package(catkin REQUIRED COMPONENTS
  actionlib
  actionlib_msgs
  geometry_msgs
  message_generation
  nav_msgs
  nav_msgs
  roscpp
  serial
  roslib
  rospy
  sensor_msgs
  std_msgs
  tf
)

add_message_files(FILES supersonic.msg)
generate_messages(DEPENDENCIES std_msgs)

# ulimit -c unlimited
# ssh firefly@192.168.1.76
add_compile_options(-g -std=c++11)    #-g -> core dumped

catkin_package(
  #INCLUDE_DIRS include
  #LIBRARIES turn_on_wheeltec_robot
  #CATKIN_DEPENDS geometry_msgs message_generation nav_msgs nav_msgs roscpp roslib rospy sensor_msgs std_msgs tf
  #DEPENDS system_lib
)

# defind robot status massage
# command atkin_make -DCATKIN_WHITELIST_PACKAGES="new_msg"
include_directories(include ${catkin_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
include_directories(include/${PROJECT_NAME})
include_directories(${catkin_INCLUDE_DIRS} ${PCL_H})

add_executable(wheeltec_robot_node src/wheeltec_robot.cpp src/Quaternion_Solution.cpp)
target_link_libraries(wheeltec_robot_node ${catkin_LIBRARIES})

add_executable(twist_transform src/twist_transform.cpp)
target_link_libraries(twist_transform ${catkin_LIBRARIES})

add_executable(ultrasonic_avoid src/lsm10_double_back.cpp)
target_link_libraries(ultrasonic_avoid  ${catkin_LIBRARIES} )